fixed navbar not taking up the full width on mobile

--- a/projectStyles.css
+++ b/projectStyles.css
@@ -26,6 +26,11 @@ h1 {
 .navbar {
     height: 70px;
     width: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 5;
     display: flex;
     background-color: #70b32c;
     color: #17172c;
